--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Pathfinding explained!</title>
+  <title>Flua</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Flua">
   <meta name="author" content="Sam van Berkel">
 
