--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                             <p class="patientCity">Roelofarendsveen</p>
                             <p class="patientWeight">71 KG</p>
                         </div>
-  </div>
+    </div>
+    <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
