--- a/succes.html
+++ b/succes.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
 
   <title>Pathfinding explained!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Flua">
   <meta name="author" content="Sam van Berkel">
 
