--- a/succes.html
+++ b/succes.html
@@ -16,8 +16,10 @@
 
 <body>
     <p>Succes!</p>
-    <div id='backButton'>
-        <p id="backButtonText">Back</p>
+    <div id="buttonContainer">
+        <div id='backButton'>
+            <p id="backButtonText">Back</p>
+        </div>
     </div>
     <script type="text/javascript" src="index.js"></script>
 </body>
