Get data from json db

--- a/index.html
+++ b/index.html
@@ -19,42 +19,9 @@
         <h1>Choose a patient</h1>
     </header>
     <div id="divPatientList">
-        <div class="divPatient">
-            <i class="fas fa-user-injured patientIcon"></i>
-            <p class="patientName">Sam van Berkel</p>
-            <p class="patientBirthdate">26-12-1996</p>
-            <p class="patientCity">Roelofarendsveen</p>
-            <p class="patientWeight">71 KG</p>
-        </div>
-        <div class="divPatient">
-            <i class="fas fa-user-injured patientIcon"></i>
-            <p class="patientName">Jensen Hickel</p>
-            <p class="patientBirthdate">13-5-1966</p>
-            <p class="patientCity">Katwijk</p>
-            <p class="patientWeight">53 KG</p>
-        </div>
-        <div class="divPatient">
-            <i class="fas fa-user-injured patientIcon"></i>
-            <p class="patientName">Piet Hoogenboom</p>
-            <p class="patientBirthdate">16-2-1963</p>
-            <p class="patientCity">Leiden</p>
-            <p class="patientWeight">76 KG</p>
-        </div>
-        <div class="divPatient">
-            <i class="fas fa-user-injured patientIcon"></i>
-            <p class="patientName">Amber van der Meer</p>
-            <p class="patientBirthdate">4-7-1984</p>
-            <p class="patientCity">Delft</p>
-            <p class="patientWeight">83 KG</p>
-        </div>
-        <div class="divPatient">
-                <i class="fas fa-user-injured patientIcon"></i>
-                <p class="patientName">Linda van Ruiten</p>
-                <p class="patientBirthdate">6-4-1976</p>
-                <p class="patientCity">Amsterdam</p>
-                <p class="patientWeight">101 KG</p>
-        </div>
+
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
