--- a/succes.html
+++ b/succes.html
@@ -21,6 +21,7 @@
             <p id="backButtonText">Back</p>
         </div>
     </div>
-    <script type="text/javascript" src="index.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="succes.js"></script>
 </body>
 </html>
