Succes styling update

--- a/succes.html
+++ b/succes.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Pathfinding explained!</title>
+  <title>Flua patient link success</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Flua">
   <meta name="author" content="Sam van Berkel">
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-    <p>Succes!</p>
+    <p>Patient gelinkt!</p>
+    <p id="subtext">Wacht tot de beker groen kleurt</p>
     <div id="buttonContainer">
         <div id='backButton'>
             <p id="backButtonText">Back</p>
